turtleart.lessons.turtleart.Main.DiskFour.scala.code
override def run() {
	arcCircle ( 100,90,90)
	setCouleurBrosse(red)
	arcCircle ( 100,90,90)
	setCouleurBrosse(yellow)
	arcCircle ( 100,90,90)
	setCouleurBrosse(rpink)
	arcCircle ( 100,90,90)
	
}
def arcCircle(radius:Int, arc : Int, rays:Int) {
	for (i<-1 to rays) {
		avance(radius)
		recule(radius)
		droite(1)
}
}
